package dev.aguss787.cs4212.assignment1.ast;

import dev.aguss787.cs4212.assignment1.utils.Checkable;
import dev.aguss787.cs4212.assignment1.utils.IR3Statementable;
import dev.aguss787.cs4212.assignment1.utils.PrettyPrintable;

public interface Statement extends PrettyPrintable, Checkable, IR3Statementable {
}
