package dev.aguss787.cs4212.assignment3.asm.Atom;

public interface Atom {
}
