@startuml

title __ASSIGNMENT-2's Class Diagram__\n

  namespace dev.aguss787.cs4212.assignment1 {
    class dev.aguss787.cs4212.assignment1.Main {
    }
  }
  

  namespace dev.aguss787.cs4212.assignment1 {
    namespace ast {
      class dev.aguss787.cs4212.assignment1.ast.BinaryOperation {
      }
    }
  }
  

  namespace dev.aguss787.cs4212.assignment1 {
    namespace ast {
      enum ArithmeticOperator {
      }
    }
  }
  

  namespace dev.aguss787.cs4212.assignment1 {
    namespace ast {
      class dev.aguss787.cs4212.assignment1.ast.Assignment {
      }
    }
  }
  

  namespace dev.aguss787.cs4212.assignment1 {
    namespace ast {
      interface dev.aguss787.cs4212.assignment1.ast.Atom {
      }
    }
  }
  

  namespace dev.aguss787.cs4212.assignment1 {
    namespace ast {
      class dev.aguss787.cs4212.assignment1.ast.AtomizedExpression {
      }
    }
  }
  

  namespace dev.aguss787.cs4212.assignment1 {
    namespace ast {
      class dev.aguss787.cs4212.assignment1.ast.BooleanLiteral {
      }
    }
  }
  

  namespace dev.aguss787.cs4212.assignment1 {
    namespace ast {
      class dev.aguss787.cs4212.assignment1.ast.Call {
      }
    }
  }
  

  namespace dev.aguss787.cs4212.assignment1 {
    namespace ast {
      class dev.aguss787.cs4212.assignment1.ast.ClassType {
      }
    }
  }
  

  namespace dev.aguss787.cs4212.assignment1 {
    namespace ast {
      class dev.aguss787.cs4212.assignment1.ast.ConstantAtom {
      }
    }
  }
  

  namespace dev.aguss787.cs4212.assignment1 {
    namespace ast {
      class dev.aguss787.cs4212.assignment1.ast.CustomClass {
      }
    }
  }
  

  namespace dev.aguss787.cs4212.assignment1 {
    namespace ast {
      class dev.aguss787.cs4212.assignment1.ast.Declaration {
      }
    }
  }
  

  namespace dev.aguss787.cs4212.assignment1 {
    namespace ast {
      class dev.aguss787.cs4212.assignment1.ast.Dot {
      }
    }
  }
  

  namespace dev.aguss787.cs4212.assignment1 {
    namespace ast {
      interface dev.aguss787.cs4212.assignment1.ast.Expression {
      }
    }
  }
  

  namespace dev.aguss787.cs4212.assignment1 {
    namespace ast {
      class dev.aguss787.cs4212.assignment1.ast.Function {
      }
    }
  }
  

  namespace dev.aguss787.cs4212.assignment1 {
    namespace ast {
      class dev.aguss787.cs4212.assignment1.ast.IfElse {
      }
    }
  }
  

  namespace dev.aguss787.cs4212.assignment1 {
    namespace ast {
      class dev.aguss787.cs4212.assignment1.ast.IntegerLiteral {
      }
    }
  }
  

  namespace dev.aguss787.cs4212.assignment1 {
    namespace ast {
      class dev.aguss787.cs4212.assignment1.ast.New {
      }
    }
  }
  

  namespace dev.aguss787.cs4212.assignment1 {
    namespace ast {
      enum PrimitiveType {
      }
    }
  }
  

  namespace dev.aguss787.cs4212.assignment1 {
    namespace ast {
      class dev.aguss787.cs4212.assignment1.ast.Println {
      }
    }
  }
  

  namespace dev.aguss787.cs4212.assignment1 {
    namespace ast {
      class dev.aguss787.cs4212.assignment1.ast.Program {
      }
    }
  }
  

  namespace dev.aguss787.cs4212.assignment1 {
    namespace ast {
      class dev.aguss787.cs4212.assignment1.ast.Readln {
      }
    }
  }
  

  namespace dev.aguss787.cs4212.assignment1 {
    namespace ast {
      interface dev.aguss787.cs4212.assignment1.ast.Referenceable {
      }
    }
  }
  

  namespace dev.aguss787.cs4212.assignment1 {
    namespace ast {
      class dev.aguss787.cs4212.assignment1.ast.ReferenceableAtom {
      }
    }
  }
  

  namespace dev.aguss787.cs4212.assignment1 {
    namespace ast {
      class dev.aguss787.cs4212.assignment1.ast.Return {
      }
    }
  }
  

  namespace dev.aguss787.cs4212.assignment1 {
    namespace ast {
      interface dev.aguss787.cs4212.assignment1.ast.Statement {
      }
    }
  }
  

  namespace dev.aguss787.cs4212.assignment1 {
    namespace ast {
      class dev.aguss787.cs4212.assignment1.ast.StringLiteral {
      }
    }
  }
  

  namespace dev.aguss787.cs4212.assignment1 {
    namespace ast {
      interface dev.aguss787.cs4212.assignment1.ast.Type {
      }
    }
  }
  

  namespace dev.aguss787.cs4212.assignment1 {
    namespace ast {
      class dev.aguss787.cs4212.assignment1.ast.UnaryOperation {
      }
    }
  }
  

  namespace dev.aguss787.cs4212.assignment1 {
    namespace ast {
      class dev.aguss787.cs4212.assignment1.ast.While {
      }
    }
  }
  

  namespace dev.aguss787.cs4212.assignment1 {
    namespace cup {
      class dev.aguss787.cs4212.assignment1.cup.Parser {
      }
    }
  }
  

  namespace dev.aguss787.cs4212.assignment1 {
    namespace cup {
      class dev.aguss787.cs4212.assignment1.cup.PrettySymbol {
      }
    }
  }
  

  namespace dev.aguss787.cs4212.assignment1 {
    namespace cup {
      class dev.aguss787.cs4212.assignment1.cup.SymbolFactories {
      }
    }
  }
  

  namespace dev.aguss787.cs4212.assignment1 {
    namespace cup {
      interface dev.aguss787.cs4212.assignment1.cup.Symbols {
      }
    }
  }
  

  namespace dev.aguss787.cs4212.assignment1 {
    namespace jflex {
      class dev.aguss787.cs4212.assignment1.jflex.Lexer {
      }
    }
  }
  

  namespace dev.aguss787.cs4212.assignment1 {
    namespace utils {
      interface dev.aguss787.cs4212.assignment1.utils.PrettyPrintable {
      }
    }
  }
  

  namespace dev.aguss787.cs4212.assignment2 {
    class dev.aguss787.cs4212.assignment2.Main {
    }
  }
  

  namespace dev.aguss787.cs4212.assignment2 {
    namespace typecheck {
      class dev.aguss787.cs4212.assignment2.typecheck.ErrorList {
      }
    }
  }
  

  namespace dev.aguss787.cs4212.assignment2 {
    namespace typecheck {
      class dev.aguss787.cs4212.assignment2.typecheck.FunctionSignature {
      }
    }
  }
  

  namespace dev.aguss787.cs4212.assignment2 {
    namespace typecheck {
      class dev.aguss787.cs4212.assignment2.typecheck.LocalEnv {
      }
    }
  }
  

  namespace dev.aguss787.cs4212.assignment2 {
    namespace typecheck {
      class dev.aguss787.cs4212.assignment2.typecheck.TypeCheck {
      }
    }
  }
  

  namespace dev.aguss787.cs4212.assignment2 {
    namespace typecheck {
      class dev.aguss787.cs4212.assignment2.typecheck.TypeDescriptor {
      }
    }
  }
  

  namespace dev.aguss787.cs4212.assignment2 {
    namespace typecheck {
      class dev.aguss787.cs4212.assignment2.typecheck.TypeMap {
      }
    }
  }
  

  namespace dev.aguss787.cs4212.assignment2 {
    namespace typecheck {
      class dev.aguss787.cs4212.assignment2.typecheck.UniqueReducer {
      }
    }
  }
  

  dev.aguss787.cs4212.assignment1.ast.BinaryOperation .up.|> dev.aguss787.cs4212.assignment1.ast.Expression
  dev.aguss787.cs4212.assignment1.ast.BinaryOperation o-- dev.aguss787.cs4212.assignment1.ast.Expression : left
  dev.aguss787.cs4212.assignment1.ast.BinaryOperation o-- dev.aguss787.cs4212.assignment1.ast.Operator : operator
  dev.aguss787.cs4212.assignment1.ast.BinaryOperation o-- dev.aguss787.cs4212.assignment1.ast.Expression : right
  dev.aguss787.cs4212.assignment1.ast.Assignment .up.|> dev.aguss787.cs4212.assignment1.ast.Statement
  dev.aguss787.cs4212.assignment1.ast.Assignment o-- dev.aguss787.cs4212.assignment1.ast.Expression : expr
  dev.aguss787.cs4212.assignment1.ast.Assignment o-- dev.aguss787.cs4212.assignment1.ast.Referenceable : target
  dev.aguss787.cs4212.assignment1.ast.AtomizedExpression .up.|> dev.aguss787.cs4212.assignment1.ast.Atom
  dev.aguss787.cs4212.assignment1.ast.AtomizedExpression o-- dev.aguss787.cs4212.assignment1.ast.Expression : expr
  dev.aguss787.cs4212.assignment1.ast.BooleanLiteral .up.|> dev.aguss787.cs4212.assignment1.ast.Expression
  dev.aguss787.cs4212.assignment1.ast.Call .up.|> dev.aguss787.cs4212.assignment1.ast.Atom
  dev.aguss787.cs4212.assignment1.ast.Call .up.|> dev.aguss787.cs4212.assignment1.ast.Statement
  dev.aguss787.cs4212.assignment1.ast.Call o-- dev.aguss787.cs4212.assignment1.ast.Atom : fun
  dev.aguss787.cs4212.assignment1.ast.ClassType .up.|> dev.aguss787.cs4212.assignment1.ast.Type
  dev.aguss787.cs4212.assignment1.ast.ConstantAtom .up.|> dev.aguss787.cs4212.assignment1.ast.Atom
  dev.aguss787.cs4212.assignment1.ast.CustomClass .up.|> dev.aguss787.cs4212.assignment1.utils.PrettyPrintable
  dev.aguss787.cs4212.assignment1.ast.Declaration .up.|> dev.aguss787.cs4212.assignment1.utils.PrettyPrintable
  dev.aguss787.cs4212.assignment1.ast.Declaration o-- dev.aguss787.cs4212.assignment1.ast.Type : type
  dev.aguss787.cs4212.assignment1.ast.Dot .up.|> dev.aguss787.cs4212.assignment1.ast.Referenceable
  dev.aguss787.cs4212.assignment1.ast.Dot o-- dev.aguss787.cs4212.assignment1.ast.Atom : left
  dev.aguss787.cs4212.assignment1.ast.Function .up.|> dev.aguss787.cs4212.assignment1.utils.PrettyPrintable
  dev.aguss787.cs4212.assignment1.ast.Function o-- dev.aguss787.cs4212.assignment1.ast.Type : returns
  dev.aguss787.cs4212.assignment1.ast.IfElse .up.|> dev.aguss787.cs4212.assignment1.ast.Statement
  dev.aguss787.cs4212.assignment1.ast.IfElse o-- dev.aguss787.cs4212.assignment1.ast.Expression : cond
  dev.aguss787.cs4212.assignment1.ast.IntegerLiteral .up.|> dev.aguss787.cs4212.assignment1.ast.Expression
  dev.aguss787.cs4212.assignment1.ast.New .up.|> dev.aguss787.cs4212.assignment1.ast.Atom
  dev.aguss787.cs4212.assignment1.ast.PrimitiveType .up.|> dev.aguss787.cs4212.assignment1.ast.Type
  dev.aguss787.cs4212.assignment1.ast.Println .up.|> dev.aguss787.cs4212.assignment1.ast.Statement
  dev.aguss787.cs4212.assignment1.ast.Println o-- dev.aguss787.cs4212.assignment1.ast.Expression : expr
  dev.aguss787.cs4212.assignment1.ast.Program .up.|> dev.aguss787.cs4212.assignment1.utils.PrettyPrintable
  dev.aguss787.cs4212.assignment1.ast.Readln .up.|> dev.aguss787.cs4212.assignment1.ast.Statement
  dev.aguss787.cs4212.assignment1.ast.ReferenceableAtom .up.|> dev.aguss787.cs4212.assignment1.ast.Referenceable
  dev.aguss787.cs4212.assignment1.ast.Return .up.|> dev.aguss787.cs4212.assignment1.ast.Statement
  dev.aguss787.cs4212.assignment1.ast.StringLiteral .up.|> dev.aguss787.cs4212.assignment1.ast.Expression
  dev.aguss787.cs4212.assignment1.ast.UnaryOperation .up.|> dev.aguss787.cs4212.assignment1.ast.Expression
  dev.aguss787.cs4212.assignment1.ast.UnaryOperation o-- dev.aguss787.cs4212.assignment1.ast.Expression : operand
  dev.aguss787.cs4212.assignment1.ast.UnaryOperation o-- dev.aguss787.cs4212.assignment1.ast.Operator : operator
  dev.aguss787.cs4212.assignment1.ast.While .up.|> dev.aguss787.cs4212.assignment1.ast.Statement
  dev.aguss787.cs4212.assignment1.ast.While o-- dev.aguss787.cs4212.assignment1.ast.Expression : cond
  dev.aguss787.cs4212.assignment1.cup.Parser -up-|> java_cup.runtime.lr_parser
  dev.aguss787.cs4212.assignment1.cup.Parser o-- dev.aguss787.cs4212.assignment1.cup.Parser.CUP$Parser$actions : action_obj
  dev.aguss787.cs4212.assignment1.cup.PrettySymbol -up-|> java_cup.runtime.Symbol
  dev.aguss787.cs4212.assignment1.cup.SymbolFactories .up.|> java_cup.runtime.SymbolFactory
  dev.aguss787.cs4212.assignment1.jflex.Lexer .up.|> java_cup.runtime.Scanner
  dev.aguss787.cs4212.assignment2.typecheck.ErrorList -up-|> java.util.ArrayList
  dev.aguss787.cs4212.assignment2.typecheck.FunctionSignature .up.|> dev.aguss787.cs4212.assignment1.ast.Type
  dev.aguss787.cs4212.assignment2.typecheck.FunctionSignature o-- dev.aguss787.cs4212.assignment1.ast.Type : returns
  dev.aguss787.cs4212.assignment2.typecheck.LocalEnv -up-|> java.util.HashMap
  dev.aguss787.cs4212.assignment2.typecheck.TypeMap -up-|> java.util.HashMap


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
